# ebutuoy

./: .gitignore  LICENSE  README.md  custom_exception.py  macoOSMain.spec  main.py  main.spec  playlist.py  pyproject.toml  single_downloader.py  windowsRelease.md  youtube.py
macOS/Ebutouy Downloader.app/Contents/: Info.plist
macOS/Ebutouy Downloader.app/Contents/Resources/: logo.icns
macOS/Ebutouy Downloader.app/Contents/_CodeSignature/: CodeResources
specFiles/: windowsMain.spec
utils/: playlist.py  single_downloader.py
