[project]
name = "ebutouy"
version = "1.0.0"
description = "An application to download youtube videos and playlists as mp3 or mp4 and in desired resolution"
requires-python = ">=3.9"
dependencies = [
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "pyinstaller>=6.19.0",
    "pyqt5>=5.15.11",
    "python-slugify>=8.0.4",
    "pytubefix>=10.3.8",
    "slugify>=0.0.1",
    "unidecode>=1.4.0",
]
